welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:10: error: reassignment to val
				x= true;
                                 ^