welcome.lessons.welcome.methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean ={
	var x:Boolean=false;
	
	for (x<-0 to 5) {
		for (x<-0 to 6) {
			avance();
			if (estSurBiscuit()) {
				setY(6);
				x= true;
			}
		}
	}
	return x
}
